Bug 1684520. Do not consider the scroll offset to be updated when we recieve a smooth scroll request. r=botond

A smooth scroll request is a request to perform scrolling in the future, it does not indicate that the scroll offset has been updated. However we still need to run a few of the things from a scroll offset update.

This seems kind of fragile. We could have more bugs of this type, I didn't look for them or audit the code, but we should.

Differential Revision: https://phabricator.services.mozilla.com/D105280